<resources>
    <string name="app_name">Calculator</string>
    <string name="zero">0</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="clear">clear</string>
    <string name="exponent">^</string>
    <string name="parentheses">(  )</string>
    <string name="devide">÷</string>
    <string name="multiply">x</string>
    <string name="add">+</string>
    <string name="subtract">-</string>
    <string name="plusMinus">+/-</string>
    <string name="point">.</string>
    <string name="equals">=</string>
    <string name="confirm">Confirm</string>
    <string name="squareBrackets">[   ]</string>
    <string name="comma">,</string>
    <string name="semicolon">;</string>
    <string name="transposed">A^T</string>
    <string name="detA">det(A)</string>
    <string name="hexLetters">ABCDEF</string>
    <string name="square">sqrt()</string>
    <string name="heksadecimal">HEX</string>
    <string name="binary">BIN</string>
    <string name="u2">U2</string>
    <string name="decimal">DEC</string>
    <string name="sin">sin</string>
    <string name="cos">cos</string>
    <string name="tg">tg</string>
    <string name="ctg">ctg</string>


<!--√-->


    <string name="info">Wpisz lub wybierz numer z kontaktów by zaprezentować sztuczkę swoim znajomym! Dzięki tej alikacji magicznie obliczysz numer telefonu!</string>
    <string name="opencontacs">lub wybierz z kontaktów:</string>
    <string name="inputnumber">Wpisz numer telefonu poniżej:</string>
    <string name="app_name2">Magic calculator</string>
    <string name="otw_rz_kontakty">Otwórz kontakty</string>


</resources>